--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
 	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	developmentOnly('org.springframework.boot:spring-boot-docker-compose')
 }
 
 tasks.named('test') {
