--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.main.banner-mode=off
-logging.level.root=off
+logging.level.root=INFO
 management.endpoints.web.exposure.include=*
 logging.level._org.springframework.web.servlet.HandlerMapping=DEBUG
+#spring.profiles.active=resttemplate
+spring.profiles.active=
+spring.docker.compose.lifecycle-management=none
+
